[package]
name = "archie"
authors = ["Helix128"]
homepage = "https://github.com/Helix128/archie-rs"
version = "0.1.0"
edition = "2024"
license-file = "Apache-2.0"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.3"
